chang src file in file

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     <header class="header">
         <div class="header-line-1">
             <div class="header-tiki-logo">
-                <img style="height: 40px" src="imgs, icons/logo tiki.png">
+                <img style="height: 40px" src="./imgs, icons/logo tiki.png">
             </div>
             <div class="header-search-bar">
                 <input type="text" placeholder="Tìm sản phẩm, danh mục hay thương hiệu mong muốn">
                 <button class="search-button">
-                    <img style="height: 17px;" src="imgs, icons/icon search.png">
+                    <img style="height: 17px;" src="./imgs, icons/icon search.png">
                     <div style="
                     font-weight: bold;
                     color: white;
